modify auth test